2017-04-16  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_pmisclass.m: Handle K22 scalar negative or null

	* utils/stk_pmisclass.m: Handle specifically, when K22 is scalar,
	the case where K22 is negative or null.

2017-03-09  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c: Remove unused variables

	* misc/pareto/private/wfg.c: Remove unused variables.

	stk_example_doe04.m: Add help text

	* examples/02_design_of_experiments/stk_example_doe04.m: Add help
	text.

	stk_param_getdefaultbounds.m: Add help text

	* paramestim/stk_param_getdefaultbounds.m: Add help text.

2017-03-08  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/ismember.m: Fix a bug

	* arrays/@stk_dataframe/ismember.m: Handle the case where A is an
	stk_dataframe object and B is an stk_hrect object (or any
	specialized stk_dataframe object that implements ismember).

	stk_plot_histnormres.m: Ignore infinite normalized residuals

	* misc/plot/stk_plot_histnormres.m: Ignore infinite normalized
	residuals, with a warning.

2017-02-21  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_phipcrit.m: Fix a typo in the help text

	* misc/design/stk_phipcrit.m: Fix a typo in the help text.

2017-02-10  Julien Bect  <julien.bect@centralesupelec.fr>

	Use fminsearch for box-constrained problems as last recourse

	* misc/optim/@stk_optim_fminsearch/stk_minimize_boxconstrained.m:
	New function, which allows to use fminsearch for box-constrained
	problems, a as last recourse for Matlab users that have neither
	the Optimization toolbox nor MOSEK.
	* admin/octpkg/INDEX: Add new function to the INDEX.

	sqp_quadprog.m: Restore warning state if quadprog fails

	* misc/optim/@stk_optim_octavesqp/private/sqp_quadprog.m: Restore
	warning state if quadprog fails.

	Provide better tools to check for optimizer availability (ticket #64)

	* misc/optim/@stk_optim_baseclass: New abstract base class for all
	optimizer object classes.
	* misc/optim/@stk_optim_baseclass/stk_optim_baseclass.m: New